----------------
Sep 19, 2021
Name: Shashikant Kumar
* Updated reference output files in tests folder
* Changed CELL to LATVEC_SCALE in tests folder
* Removed the saving workspace for each runs
* Added NLCC tests


----------------
Sep 16, 2021
Name: Xin Jing
* Add LATVEC_SCALE option
* Add magnetization mixing method
* Add NLCC
* udpate documentation
* Capitalize all Error and Warning
* Fix a bug in spherical harmonics

----------------
July 9, 2021
Name: Shashikant Kumar
* Changed Readme.md and doc manual to make it consistent with the new tests folder

----------------
June 16, 2021
Name: Shashikant Kumar
* Added the testing suite and the python framework
* Deleted the old "tests" folder

----------------
Oct 07, 2020
Name: Qimen Xu
* Modify pseudopotential reading to support TM potentials.


----------------
Jul 27, 2020
Name: Qimen Xu
* Fix the atom type in the cnt.ion file at tests/IllustrativeExamples/CNT/, the answer of this test is not changed.


----------------
Jun 20, 2020
Name: Qimen Xu
* Use max and min of S.EigVal instead of assuming it's ordered ascendingly.


----------------
Jun 01, 2020
Name: Qimen Xu
* Correct the relative src/ path run_examples.m in tests/examples.
* Modify readPseudopot.m to be consistent with SPARC, so that it can handle special psp8 pseudopotentials (e.g., He with lloc = 0).


----------------
Feb 03, 2020
Name: Qimen Xu
* Update documentation and README.md, add link to SG15 ONCV potentials.
* Move examples/ directory to under tests/.
* Add M-SPARC version to .out file.
* Print boundary conditions in the form of `BC: P P D` in .out file.
* Rerun tests and update the reference output files.
